- The property INTERMediatorOnPage.updateProcessedNode controls updating the node value after node processing.
  It applies nodes other than INPUT/SELECT/TEXTAREA tag. The default value is false, and the values don't update.
- The "confirm-messages" key in a context of definition file can set the dialog message after clicking insert/delete/copy button.
- [BUG FIX] The lookup feature was not fully efficient, and refactored them.
- [BUG FIX] When checkbox set to off, the message which someone modified showed unexpectedly.
- [BUG FIX] After moving from list to detail and back to list page, paging position wasn't retrieve and show the
  list from the start of it.
- [BUG FIX] The definition file editor didn't support some keys added from Ver.8 or whatever.
- [BUG FIX] On the master/detail navigation, Any buttons on pagination were disappeared after clicking Detail button.
- [BUG FIX] On the MediaAccess class, container data with FileMaker_DataAPI couldn't get.

Ver.9 (January 31, 2022)
- [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
  to authenticate user, the SAML is the replacement. SAML IdP can integrate with LDAP server as a identifying users.
  Dropped "php-bcmath" and "php-ldap" from the composer.json, and "jsencrypt" from package.json.
- [INFO] The /spec/Manual-Test directory is created on this repository. The SAML-Test.md file show the result of the
  manual test with SAML features.

- IMLibUI.revertOnValidationError can control to retrieve the original value or not, after validation error.
  The default value is true, and it means retrieve it.
- DB\Logger class accept the setWarningMessage() method, and it shows the message with the alert() on client.
  Also INTERMediatorLog.warningMessagePrevent can stop the alert box with setting to true, and the default is false.
- In case of Messaging errors, the Warning Messages are set instead of error messages.