@@ -437,7 +437,7 @@ const INTERMediator = {
     await INTERMediatorOnPage.retrieveAuthInfo()
     INTERMediator.connectToServiceServer()
 
-    if(!IMLibPageNavigation.isKeepOnNaviArray) {
+    if (!IMLibPageNavigation.isKeepOnNaviArray) {
       IMLibPageNavigation.deleteInsertOnNavi = []
     }
     try {
@@ -1504,12 +1504,14 @@ const INTERMediator = {
             currentContextDef.name, 2)
         }
 
-        if (currentContextDef['post-repeater']) {
+        if (INTERMediatorOnPage[`postRepeater_${currentContextDef.name}`]) {
+          INTERMediatorOnPage[`postRepeater_${currentContextDef.name}`](newlyAddedNodes)
+          INTERMediatorLog.setDebugMessage('Call the post repeater method INTERMediatorOnPage.postRepeater_' +
+            currentContextDef['name'] + ' with the context: ' + currentContextDef.name, 2)
+        } else if (currentContextDef['post-repeater'] && INTERMediatorOnPage[currentContextDef['post-repeater']]) {
           INTERMediatorOnPage[currentContextDef['post-repeater']](newlyAddedNodes)
-
           INTERMediatorLog.setDebugMessage('Call the post repeater method INTERMediatorOnPage.' +
-            currentContextDef['post-repeater'] + ' with the context: ' +
-            currentContextDef.name, 2)
+            currentContextDef['post-repeater'] + ' with the context: ' + currentContextDef.name, 2)
         }
       } catch (ex) {
         if (ex.message === '_im_auth_required_') {
@@ -1554,7 +1556,12 @@ const INTERMediator = {
         }
       }
       try {
-        if (currentContextDef['post-enclosure']) {
+        if (INTERMediatorOnPage[`postEnclosure_${currentContextDef.name}`]) {
+          INTERMediatorOnPage[`postEnclosure_${currentContextDef.name}`](node)
+          INTERMediatorLog.setDebugMessage(
+            'Call the post enclosure method INTERMediatorOnPage.postEnclosure_' + currentContextDef.name +
+            ' with the context: ' + currentContextDef.name, 2)
+        } else if (currentContextDef['post-enclosure'] && INTERMediatorOnPage[currentContextDef['post-enclosure']]) {
           INTERMediatorOnPage[currentContextDef['post-enclosure']](node)
           INTERMediatorLog.setDebugMessage(
             'Call the post enclosure method INTERMediatorOnPage.' + currentContextDef['post-enclosure'] +
@@ -1564,8 +1571,7 @@ const INTERMediator = {
         if (ex.message === '_im_auth_required_') {
           throw ex
         } else {
-          INTERMediatorLog.setErrorMessage(ex,
-            'EXCEPTION-22: hint: post-enclosure of ' + currentContextDef.name)
+          INTERMediatorLog.setErrorMessage(ex, 'EXCEPTION-22: hint: post-enclosure of ' + currentContextDef.name)
         }
       }
     }
